--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ plugins {
 }
 
 ext {
+    RELEASE = 1 // Bump when making additional releases to a given mc version
     MC_VERSION = '1.14.4'
     MCP_VERSION = '20190829.143755'
     BINPATCH_VERSION = '1.0.5'
@@ -14,7 +15,7 @@ ext {
 }
 
 group = 'net.impactclient'
-version = MC_VERSION
+version = "${MC_VERSION}-${RELEASE}"
 
 sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
 compileJava {
