Set userdev classifier
It seems forgegradle has this hard-coded

--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,7 @@ processResources {
 }
 
 jar {
+    classifier 'userdev'
     manifest {
         attributes(
                 'Specification-Title': 'Vanilla User Development',
